tests/e2e/semantics/list_nested3.error
Error: syntax error in story at line 5, column 5

5|    e = d + 1
          ^

E0103: `List[Map[string,List[List[int]]]]` is not compatible with `int`
